@@ -1634,6 +1634,12 @@ speed_mpn_matrix22_mul (struct speed_params *s)
 }
 
 double
+speed_mpn_hgcd2 (struct speed_params *s)
+{
+  SPEED_ROUTINE_MPN_HGCD2 (mpn_hgcd2);
+}
+
+double
 speed_mpn_hgcd (struct speed_params *s)
 {
   SPEED_ROUTINE_MPN_HGCD_CALL (mpn_hgcd, mpn_hgcd_itch);
